--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@
 
 @font-face {
   font-family: "HyperBlob";
-  src: url("/fonts/hyperblob2.otf") format("opentype");
+  src: url("/fonts/Audiowide.ttf") format("opentype");
   font-weight: normal;
   font-style: normal;
 }
@@ -31,4 +31,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
    overflow-x: hidden;
+}
+.text-stroke {
+  -webkit-text-stroke: 1px white; /* grubość i kolor obrysu */
+  color: transparent; /* usuwa wypełnienie */
 }
