--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-   overflow-x: hidden;
+  overflow-x: hidden;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 .text-stroke {
   -webkit-text-stroke: 1px white; /* grubość i kolor obrysu */
