--- a/app/globals.css
+++ b/app/globals.css
@@ -38,3 +38,12 @@ body {
   -webkit-text-stroke: 1px white; /* grubość i kolor obrysu */
   color: transparent; /* usuwa wypełnienie */
 }
+
+@keyframes spin-slow {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.animate-spin-slow {
+  animation: spin-slow 10s linear infinite;
+}
