--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,10 @@
   font-style: normal;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
